# outpost

./: .gitignore  README.md  outpost.json  pyproject.toml
outpost/: cli.py  do_api.py
tools/: outpost-down  outpost-init  outpost-ls  outpost-pull  outpost-push  outpost-ssh  outpost-up
